crossgcc: Also add the nds32le architecture to the coreboot Makefile
Change-Id: Ibf3346586d188dbd5b7ab10bedfc1609b2bb1499
Signed-off-by: Patrick Georgi <pgeorgi@chromium.org>
Reviewed-on: https://review.coreboot.org/13565
Tested-by: build bot (Jenkins)
Reviewed-by: Stefan Reinauer <stefan.reinauer@coreboot.org>

--- a/util/crossgcc/Makefile.inc
+++ b/util/crossgcc/Makefile.inc
@@ -13,7 +13,7 @@
 ## GNU General Public License for more details.
 ##
 
-TOOLCHAIN_ARCHES := i386 x86 arm aarch64 mips riscv power8
+TOOLCHAIN_ARCHES := i386 x86 arm aarch64 mips riscv power8 nds32le
 
 help_toolchain help::
 	@echo  '*** Toolchain targets ***'
