soc/qualcomm/ipq40xx: Add config option for SBL utils path
BUG=chrome-os-partner:49249
TEST=Compiles...
BRANCH=none

Original-Commit-Id: bf907395f4abe859489276e793d9662c8594ff9b
Original-Change-Id: I132bfe667f9b4fad32ed7b14091c4523020183d0
Original-Signed-off-by: Varadarajan Narayanan <varada@codeaurora.org>
Original-Reviewed-on: https://chromium-review.googlesource.com/333309
Original-Commit-Ready: David Hendricks <dhendrix@chromium.org>
Original-Tested-by: David Hendricks <dhendrix@chromium.org>
Original-Reviewed-by: David Hendricks <dhendrix@chromium.org>

squashed:

soc/qualcomm/ipq40xx: Update build script util path

BUG=chrome-os-partner:49249
TEST=Able to boot and reach depthcharge
BRANCH=none

Original-Commit-Id: ffd5fc7a92dae6c5ae11ad7fc85d55dac47b3b3b
Original-Change-Id: I7a8011fc9ba2ac25d795d12b61eb9205e414e0c5
Original-Signed-off-by: Varadarajan Narayanan <varada@codeaurora.org>
Original-Reviewed-on: https://chromium-review.googlesource.com/340182
Original-Commit-Ready: Nicolas Boichat <drinkcat@chromium.org>
Original-Reviewed-by: David Hendricks <dhendrix@chromium.org>

Change-Id: If41b5faab7952b1017877a91e4cf281ee4ce99d9
Signed-off-by: Patrick Georgi <pgeorgi@chromium.org>
Reviewed-on: https://review.coreboot.org/14652
Tested-by: build bot (Jenkins)
Reviewed-by: Martin Roth <martinroth@google.com>

--- a/src/soc/qualcomm/ipq40xx/Kconfig
+++ b/src/soc/qualcomm/ipq40xx/Kconfig
@@ -42,4 +42,12 @@ config SBL_ELF
 	  The path and filename of the binary blob containing
 	  ipq40xx early initialization code, as supplied by the
 	  vendor.
+
+config SBL_UTIL_PATH
+	depends on USE_BLOBS
+	string "Path for utils to combine SBL_ELF and bootblock"
+	default "util/ipqheader"
+	help
+	  Path for utils to combine SBL_ELF and bootblock
+
 endif
