chromebooks: Define GBB hardware IDs
This makes the test IDs the default, taken from depthcharge
master (board/*/fmap.dts, hwid property).

Change-Id: I25793962ac16f451f204dbba6ede6a64c847cfd5
Signed-off-by: Patrick Georgi <pgeorgi@chromium.org>
Reviewed-on: https://review.coreboot.org/13634
Reviewed-by: Martin Roth <martinroth@google.com>
Tested-by: build bot (Jenkins)

--- a/src/mainboard/google/auron/Kconfig
+++ b/src/mainboard/google/auron/Kconfig
@@ -59,4 +59,9 @@ config EC_GOOGLE_CHROMEEC_BOARDNAME
 	string
 	default "auron"
 
+config GBB_HWID
+	string
+	depends on CHROMEOS
+	default "AURON TEST A-A 9944"
+
 endif
