--- a/src/mainboard/google/veyron/Kconfig
+++ b/src/mainboard/google/veyron/Kconfig
@@ -100,4 +100,18 @@ config EC_GOOGLE_CHROMEEC_BOARDNAME
 	#default "speedy" if BOARD_GOOGLE_VEYRON_SPEEDY
 	#default "thea" if BOARD_GOOGLE_VEYRON_THEA
 
+config GBB_HWID
+	string
+	depends on CHROMEOS
+	default "GUS TEST A-A 2606" if BOARD_GOOGLE_VEYRON_GUS
+	default "JAQ TEST A-A 8292" if BOARD_GOOGLE_VEYRON_JAQ
+	default "JERRY TEST A-A 1250" if BOARD_GOOGLE_VEYRON_JERRY
+	default "MIGHTY TEST A-A 4557" if BOARD_GOOGLE_VEYRON_MIGHTY
+	default "MINNIE TEST A-A 5151" if BOARD_GOOGLE_VEYRON_MINNIE
+	default "NICKY TEST A-A 9039" if BOARD_GOOGLE_VEYRON_NICKY
+	default "PINKY TEST A-A 3693" if BOARD_GOOGLE_VEYRON_PINKY
+	default "SHARK TEST A-A 8553" if BOARD_GOOGLE_VEYRON_SHARK
+	default "SPEEDY TEST A-A 8421" if BOARD_GOOGLE_VEYRON_SPEEDY
+	default "THEA TEST A-A 7163" if BOARD_GOOGLE_VEYRON_THEA
+
 endif #  BOARD_GOOGLE_VEYRON
