--- a/src/mainboard/google/foster/Kconfig
+++ b/src/mainboard/google/foster/Kconfig
@@ -88,4 +88,8 @@ config DRIVER_TPM_I2C_ADDR
 #	string
 #	default "nyan"
 
+config GBB_HWID
+	string
+	depends on CHROMEOS
+	default "FOSTER TEST 1184"
 endif # BOARD_GOOGLE_FOSTER
