--- a/src/mainboard/google/lars/Kconfig
+++ b/src/mainboard/google/lars/Kconfig
@@ -72,4 +72,8 @@ config EC_GOOGLE_CHROMEEC_PD_BOARDNAME
 	string
 	default "lars_pd"
 
+config GBB_HWID
+	string
+	depends on CHROMEOS
+	default "LARS TEST 5001"
 endif
