--- a/src/mainboard/google/nyan_big/Kconfig
+++ b/src/mainboard/google/nyan_big/Kconfig
@@ -96,4 +96,8 @@ config EC_GOOGLE_CHROMEEC_BOARDNAME
 	string
 	default "big"
 
+config GBB_HWID
+	string
+	depends on CHROMEOS
+	default "BIG TEST 9382"
 endif # BOARD_GOOGLE_NYAN_BIG
