--- a/src/mainboard/google/oak/Kconfig
+++ b/src/mainboard/google/oak/Kconfig
@@ -63,4 +63,8 @@ config EC_GOOGLE_CHROMEEC_PD_BOARDNAME
 	string
 	default "oak_pd"
 
+config GBB_HWID
+	string
+	depends on CHROMEOS
+	default "OAK TEST 6858"
 endif # BOARD_GOOGLE_OAK
