--- a/src/mainboard/google/rambi/Kconfig
+++ b/src/mainboard/google/rambi/Kconfig
@@ -42,4 +42,8 @@ config EC_GOOGLE_CHROMEEC_BOARDNAME
 	string
 	default "rambi"
 
+config GBB_HWID
+	string
+	depends on CHROMEOS
+	default "RAMBI TEST A-A 0128"
 endif # BOARD_GOOGLE_RAMBI
