--- a/src/mainboard/google/rush_ryu/Kconfig
+++ b/src/mainboard/google/rush_ryu/Kconfig
@@ -92,4 +92,8 @@ config EC_GOOGLE_CHROMEEC_BOARDNAME
 	string
 	default "ryu"
 
+config GBB_HWID
+	string
+	depends on CHROMEOS
+	default "RYU TEST 9382"
 endif # BOARD_GOOGLE_RUSH_RYU
