--- a/src/mainboard/google/samus/Kconfig
+++ b/src/mainboard/google/samus/Kconfig
@@ -57,4 +57,8 @@ config EC_GOOGLE_CHROMEEC_PD_BOARDNAME
 	string
 	default "samus_pd"
 
+config GBB_HWID
+	string
+	depends on CHROMEOS
+	default "SAMUS TEST 8028"
 endif
