--- a/src/mainboard/intel/strago/Kconfig
+++ b/src/mainboard/intel/strago/Kconfig
@@ -59,4 +59,8 @@ config EC_GOOGLE_CHROMEEC_BOARDNAME
 	string
 	default "strago"
 
+config GBB_HWID
+	string
+	depends on CHROMEOS
+	default "STRAGO TEST A-A 9657"
 endif # BOARD_INTEL_STRAGO
