--- a/src/soc/intel/quark/Kconfig
+++ b/src/soc/intel/quark/Kconfig
@@ -174,6 +174,13 @@ config FSP_ESRAM_LOC
 	help
 	  The location in ESRAM where a copy of the FSP binary is placed.
 
+config RELOCATE_FSP_INTO_DRAM
+	bool "Relocate FSP into DRAM"
+	default n
+	depends on PLATFORM_USES_FSP1_1
+	help
+	  Relocate the FSP binary into DRAM before the call to SiliconInit.
+
 #####
 # FSP PDAT binary
 #     The following options control the FSP platform data binary
