console: Disable SQUELCH_EARLY_SMP if SMP is not selected
Add a "depends on SMP" to the value SQUELCH_EARLY_SMP Kconfig value to
disable its selection when SMP is not enabled.

TEST=Build for Galileo

Change-Id: Ia3aa1d2169ed793e1bb26538b74b12347453d5af
Signed-off-by: Lee Leahy <leroy.p.leahy@intel.com>
Reviewed-on: https://review.coreboot.org/13639
Tested-by: build bot (Jenkins)
Reviewed-by: FEI WANG <wangfei.jimei@gmail.com>
Reviewed-by: Martin Roth <martinroth@google.com>

--- a/src/console/Kconfig
+++ b/src/console/Kconfig
@@ -10,6 +10,7 @@ config BOOTBLOCK_CONSOLE
 config SQUELCH_EARLY_SMP
 	bool "Squelch AP CPUs from early console."
 	default y
+	depends on SMP
 	help
 	  When selected only the BSP CPU will output to early console.
 
