--- a/src/northbridge/intel/sandybridge/Kconfig
+++ b/src/northbridge/intel/sandybridge/Kconfig
@@ -45,6 +45,10 @@ config NORTHBRIDGE_INTEL_IVYBRIDGE
 
 if NORTHBRIDGE_INTEL_SANDYBRIDGE_MRC || NORTHBRIDGE_INTEL_IVYBRIDGE_MRC || NORTHBRIDGE_INTEL_IVYBRIDGE || NORTHBRIDGE_INTEL_SANDYBRIDGE
 
+config CBFS_SIZE
+	hex
+	default 0x100000
+
 config VGA_BIOS_ID
 	string
 	default "8086,0106"
