--- a/src/soc/intel/skylake/Kconfig
+++ b/src/soc/intel/skylake/Kconfig
@@ -64,6 +64,10 @@ config BOOTBLOCK_SOUTHBRIDGE_INIT
 	string
 	default "soc/intel/skylake/bootblock/pch.c"
 
+config CBFS_SIZE
+	hex
+	default 0x200000
+
 config CPU_ADDR_BITS
 	int
 	default 36
