gitconfig: Fix make gitconfig if USE_BLOBS is disabled
We tested for the presence of .git/modules/3rdparty, which always exists
now because of .git/modules/3rdparty/chrome-ec. Test for .../hooks
instead since that's the actual location for the later activities.

Change-Id: Id5de9f850413c2bc3525faa6cc549641304c3d47
Signed-off-by: Patrick Georgi <pgeorgi@google.com>
Reviewed-on: https://review.coreboot.org/13650
Tested-by: build bot (Jenkins)
Reviewed-by: Martin Roth <martinroth@google.com>
Reviewed-by: Stefan Reinauer <stefan.reinauer@coreboot.org>

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -475,7 +475,7 @@ gitconfig:
 		fi;						     \
 	done
 	# Now set up thehooks for 3rdparty/blobs
-	if [ -d .git/modules/3rdparty -a \
+	if [ -d .git/modules/3rdparty/hooks -a \
 	\( util/gitconfig/commit-msg -nt .git/modules/3rdparty/hooks/commit-msg -o \
 	! -x .git/modules/3rdparty/hooks/commit-msg \) ]; then \
 		sed -e "s,%MAKE%,$(MAKE),g" util/gitconfig/commit-msg > .git/modules/3rdparty/hooks/commit-msg; \
