--- a/src/mainboard/samsung/lumpy/Kconfig
+++ b/src/mainboard/samsung/lumpy/Kconfig
@@ -11,7 +11,7 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 	select HAVE_ACPI_RESUME
 	select HAVE_ACPI_TABLES
 	select HAVE_OPTION_TABLE
-	select NORTHBRIDGE_INTEL_SANDYBRIDGE_MRC
+	select NORTHBRIDGE_INTEL_SANDYBRIDGE
 	select SOUTHBRIDGE_INTEL_BD82X6X
 	select SUPERIO_SMSC_MEC1308
 # LPC47N207 selected for external LPC card
@@ -20,6 +20,10 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 	select DRIVERS_GENERIC_IOAPIC
 	select INTEL_INT15
 	select HAVE_MRC
+
+config USE_NATIVE_RAMINIT
+	bool
+	default n
 
 config CHROMEOS
 	select CHROMEOS_VBNV_CMOS
