--- a/src/mainboard/samsung/stumpy/Kconfig
+++ b/src/mainboard/samsung/stumpy/Kconfig
@@ -9,7 +9,7 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 	select HAVE_ACPI_RESUME
 	select HAVE_ACPI_TABLES
 	select HAVE_OPTION_TABLE
-	select NORTHBRIDGE_INTEL_SANDYBRIDGE_MRC
+	select NORTHBRIDGE_INTEL_SANDYBRIDGE
 	select SOUTHBRIDGE_INTEL_BD82X6X
 	select SUPERIO_ITE_IT8772F
 # LPC47N207 selected for external LPC card
@@ -17,6 +17,10 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 	select SUPERIO_SMSC_LPC47N207
 	select HAVE_MRC
 	select INTEL_INT15
+
+config USE_NATIVE_RAMINIT
+	bool
+	default n
 
 config CHROMEOS
 	select PHYSICAL_REC_SWITCH
