--- a/src/mainboard/samsung/lumpy/Kconfig
+++ b/src/mainboard/samsung/lumpy/Kconfig
@@ -19,11 +19,12 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 	select SUPERIO_SMSC_LPC47N207
 	select DRIVERS_GENERIC_IOAPIC
 	select INTEL_INT15
-	select HAVE_MRC
 
-config USE_NATIVE_RAMINIT
-	bool
-	default n
+if !USE_NATIVE_RAMINIT
+config BOARD_SPECIFIC_OPTIONS_MRC # dummy
+       def_bool y
+       select HAVE_MRC
+endif
 
 config CHROMEOS
 	select CHROMEOS_VBNV_CMOS
