cpu/amd: Add socket FM2
Change-Id: I397c908867fef7583063c8cad7b83ce53482529b
Signed-off-by: Damien Zammit <damien@zamaudio.com>
Reviewed-on: https://review.coreboot.org/13708
Tested-by: build bot (Jenkins)
Reviewed-by: Martin Roth <martinroth@google.com>

--- a/src/cpu/amd/family_10h-family_15h/Kconfig
+++ b/src/cpu/amd/family_10h-family_15h/Kconfig
@@ -18,6 +18,7 @@ if CPU_AMD_MODEL_10XXX
 config USE_LARGE_DCACHE
 	bool
 	default y if CPU_AMD_SOCKET_G34_NON_AGESA
+	default y if CPU_AMD_SOCKET_FM2_NON_AGESA
 	default y if CPU_AMD_SOCKET_C32_NON_AGESA
 	default n
 
