cpu/qemu-power8: don't enable it for qemu-x86
Change-Id: I17ba5a85fecf08ab9970a57c7696525287bbc5a8
Signed-off-by: Patrick Georgi <pgeorgi@chromium.org>
Reviewed-on: https://review.coreboot.org/13745
Reviewed-by: Timothy Pearson <tpearson@raptorengineeringinc.com>
Tested-by: build bot (Jenkins)
Reviewed-by: Martin Roth <martinroth@google.com>
Reviewed-by: Ronald G. Minnich <rminnich@gmail.com>

--- a/src/cpu/qemu-power8/Kconfig
+++ b/src/cpu/qemu-power8/Kconfig
@@ -13,7 +13,7 @@
 ## GNU General Public License for more details.
 ##
 
-config CPU_QEMU_X86
+config CPU_QEMU_POWER8
 	bool
 	select ARCH_BOOTBLOCK_POWER8
 	select ARCH_VERSTAGE_POWER8
